fix readme, fix build.gradle.kts, add install_java.sh