@@ -5,6 +5,7 @@ plugins {
     id("io.github.reyerizo.gradle.jcstress") version "0.8.13"
 }
 
+
 buildscript {
     repositories {
         mavenCentral()
@@ -17,14 +18,13 @@ buildscript {
 
 apply(plugin = "kotlinx-atomicfu")
 
-
 application {
     mainClass.set("ru.ricnorr.benchmarks.Main")
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_19
+    targetCompatibility = JavaVersion.VERSION_19
 }
 
 
@@ -33,8 +33,13 @@ tasks.withType<JavaCompile>().configureEach {
         "--add-opens",
         "java.base/jdk.internal.misc=ALL-UNNAMED",
         "--add-exports",
-        "java.base/jdk.internal.util=ALL-UNNAMED"
+        "java.base/jdk.internal.util=ALL-UNNAMED",
+        "--enable-preview"
     )
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs = listOf("--enable-preview")
 }
 
 group = "me.ricnorr"
@@ -67,6 +72,6 @@ tasks.test {
         "--add-exports",
         "java.base/jdk.internal.loader=ALL-UNNAMED",
         "--add-exports",
-        "java.base/jdk.internal.util=ALL-UNNAMED"
+        "java.base/jdk.internal.util=ALL-UNNAMED",
     )
 }
